# calculadora

./: .gitignore  CMakeLists.txt  README.md  build.py  configure.py  setup.py
.cache/clangd/index/: main.cpp.A34984F6434077F6.idx
calc/: CMakeLists.txt
calc/include/calc/: Calc.hpp  Lexer.hpp  lexer.hpp  parser.hpp
calc/include/calc/ui/: Color.hpp  Layout.hpp  layout.hpp
calc/include/calc/ui/components/: Button.hpp  TextBox.hpp
calc/include/calc/ui/gfx/: component.hpp  shape.hpp
calc/include/calc/ui/shapes/: Rectangle.hpp
calc/source/: CMakeLists.txt  Calc.cpp  Lexer.cpp  Main.cpp  lexer.cpp  main.cpp  parser.cpp
calc/source/ui/: CMakeLists.txt  Layout.cpp  layout.cpp
cmake/: clang_tidy.cmake
